--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,14 @@
     "react-scripts": "2.1.1",
     "react-toastify": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject" 
+    "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:3001"
-
 }
